--- a/index.html
+++ b/index.html
@@ -5,37 +5,17 @@
 	
 	LD35 entry for theme shapeshift.
 	
-	Copyright 2016, Håkan Ståby
+	Copyright 2016, Hakan Staby
 	 
 	-->
-	
 	<meta charset=utf-8>
 	<title>Shapeshift LD35</title>
 	<link rel="stylesheet" href="css/shapeshift.css" />
 			
 </head>
 <body>
-	<header>
-		<h1>Shapeshift LD35</h1>
-	</header>
-	
-	<section id="game">		
-		game
-	</section> <!-- #game -->
-	
-	<section id="popup" class="hide">
-		<div id="popup-bg">
-		</div>
-		
-		<div id="popup-box">	
-			<div id="popup-box-content">
-				<h1>You Won!</h1>				
-				<p>Your Score:</p>
-				<p><span class='score'>1</span></p>
-			</div>
-		</div>
-	</section>
-
+	<!-- box2djs -->
+<script src="js/phaser.min.js"></script>
 <script src="js/jquery-1.12.3.min.js"></script>
 <script src="js/ld35.shapeshift.js"></script>
 </body>
