--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
 			
 </head>
 <body>
+	<header>
+		<h1>Shapeshift LD35</h1>
+	</header>
+	
+	<section id="game">		
+		game
+	</section> <!-- #game -->
+	<section id="popup" class="hide">
+		<div id="popup-bg">
+		</div>
+		
+		<div id="popup-box">	
+			<div id="popup-box-content">
+				<h1>You Won!</h1>				
+				<p>Your Score:</p>
+				<p><span class='score'>1</span></p>
+			</div>
+		</div>
+	</section>
 	<!-- box2djs -->
 <script src="js/phaser.min.js"></script>
 <script src="js/jquery-1.12.3.min.js"></script>
