--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 
     window.onload = function() {
 
-        var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create });
+        var game = new Phaser.Game(800, 600, Phaser.AUTO, 'game', { preload: preload, create: create });
 
         function preload () {
 
